log
Fri 21 Apr 2023 05:40:17 PM UTC: 
 tests:  1|8
total_score: 0/70
c3879b6
Fri 21 Apr 2023 05:53:52 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:9: error: ‘map’ undeclared (first use in this function)
   48 |         map->lower_than = lt;
      |         ^~~
treemap.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:14: error: unused variable ‘new’ [-Werror=unused-variable]
   43 |   TreeNode * new = (TreeNode*)malloc(sizeof(TreeNode));
      |              ^~~
treemap.c: At top level:
treemap.c:52:11: error: redefinition of ‘createTreeMap’
   52 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:41:15: note: previous definition of ‘createTreeMap’ with type ‘TreeMap *(int (*)(void *, void *))’
   41 |     TreeMap * createTreeMap(int (*lt) (void* key1, void* key2))
      |               ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e952001
Fri 21 Apr 2023 05:58:01 PM UTC: 
 treemap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c:50:11: error: redefinition of ‘createTreeMap’
   50 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:41:15: note: previous definition of ‘createTreeMap’ with type ‘TreeMap *(int (*)(void *, void *))’
   41 |     TreeMap * createTreeMap(int (*lt) (void* key1, void* key2))
      |               ^~~~~~~~~~~~~
Compilation failed
d388966
Fri 21 Apr 2023 05:58:21 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|7
total_score: 5/70
0552078
Fri 21 Apr 2023 06:11:38 PM UTC: 
 treemap.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 64 insertions(+)
 tests:  4|7
total_score: 5/70
bb46eec
Fri 21 Apr 2023 06:16:40 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:128:23: error: expected ‘;’ before ‘return’
  128 |   while (node != NULL) // Mientras no se haya llegado al final del árbol
      |                       ^
      |                       ;
......
  131 |     return NULL;
      |     ~~~~~~             
treemap.c:132:1: error: control reaches end of non-void function [-Werror=return-type]
  132 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
189aa09
Fri 21 Apr 2023 06:19:07 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:147:1: error: expected ‘while’ before ‘Pair’
  147 | Pair * upperBound(TreeMap * tree, void* key) {
      | ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ae7d4fa
Fri 21 Apr 2023 06:19:52 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:14: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  133 |       return node;
      |              ^~~~
treemap.c:145:1: error: expected ‘while’ before ‘Pair’
  145 | Pair * upperBound(TreeMap * tree, void* key) {
      | ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
2ac993b
Fri 21 Apr 2023 06:20:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:28: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  133 |       return tree->current = node;
      |              ~~~~~~~~~~~~~~^~~~~~
treemap.c:145:1: error: expected ‘while’ before ‘Pair’
  145 | Pair * upperBound(TreeMap * tree, void* key) {
      | ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce17b6f
Fri 21 Apr 2023 06:20:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:18: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  133 |       return tree->current;
      |              ~~~~^~~~~~~~~
treemap.c:145:1: error: expected ‘while’ before ‘Pair’
  145 | Pair * upperBound(TreeMap * tree, void* key) {
      | ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
49ac948
Fri 21 Apr 2023 06:21:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:145:1: error: expected ‘while’ before ‘Pair’
  145 | Pair * upperBound(TreeMap * tree, void* key) {
      | ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5bff2f0
